tests/testcases/net2/errors/BCE0139-1.boo
"""
BCE0139-1.boo(6,16): BCE0139: 'System.Collections.Generic.Dictionary`2' requires '2' arguments.
"""
import System.Collections.Generic

d = Dictionary of int()
